# blender-msal-plugin

./: .editorconfig  .env  .gitignore  Justfile  README.md  pyproject.toml
src/: __init__.py  blender_manifest.toml  login.py  plugin.py
